Fix to handle loading kjx on Windows filesystem